syntax = "proto3";

package enoki.internal;
option go_package = "github.com/walkergriggs/enoki/internal/proto/manifest";

import "google/api/annotations.proto";

service ManifestService {
  rpc GetManifest(ManifestRequest) returns (Manifest) {
    option (google.api.http) = {
      get: "/v1/manifests"
    };
  }
}

message Manifest {
  Error error = 1;
  uint64 id = 2;
  string path = 3;
}

message ManifestRequest {
  string Name = 1;
}

message Error {
  uint32 code = 1;
  string message = 2;
}
